--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,24 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "main",
+      "name": "flickr (b=4, e=300, l=luca, spell+oov)",
       "type": "python",
       "request": "launch",
       "program": "main.py",
-      "args": ["--word_emb_dim=50", "--emb_dim=50", "--batch=4", "--loss_strategy=luca"],
+      "args": ["--word_emb_dim=300", "--emb_dim=300", "--batch=4", "--loss_strategy=luca", "--do_spellchecker", "--do_oov"],
+      "console": "integratedTerminal",
+      "cwd": "${workspaceFolder}",
+      "env": {
+        "PYTHONPATH":"${PYTHONPATH}:/home/lparolari/.miniconda3/envs/weakvg/bin",
+        "WANDB_MODE": "offline"
+      }
+    },
+    {
+      "name": "referit (b=4, e=300, l=luca, spell+oov)",
+      "type": "python",
+      "request": "launch",
+      "program": "main.py",
+      "args": ["--word_emb_dim=300", "--emb_dim=300", "--batch=4", "--loss_strategy=luca", "--do_spellchecker", "--do_oov", "--dataset=referit"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}",
       "env": {
