Add bert for query repr

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,12 +9,13 @@
       "type": "python",
       "request": "launch",
       "program": "main.py",
-      "args": ["--word_emb_dim=50", "--emb_dim=50", "--batch=4", "--loss_strategy=ce", "--dry_run", "--device=cpu", "--dataset=referit", "--lstm_num_layers=2", "--use_head_for_concept_embedding", "--do_head"],
+      "args": ["--word_emb_dim=50", "--emb_dim=50", "--batch=4", "--loss_strategy=ce", "--dry_run", "--device=cpu", "--dataset=flickr30k", "--do_bert", "--use_minilm_for_query_embedding", "--do_negative_weighting"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}",
       "env": {
         "PYTHONPATH":"${PYTHONPATH}:/home/lparolari/.miniconda3/envs/weakvg/bin",
-        "WANDB_MODE": "offline"
+        "WANDB_MODE": "offline",
+        "TOKENIZERS_PARALLELISM": "true"
       }
     },
     {
