--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "python",
       "request": "launch",
       "program": "main.py",
-      "args": ["--word_emb_dim=50", "--emb_dim=50", "--batch=4", "--loss_strategy=ce", "--dry_run", "--device=cpu", "--dataset=flickr30k", "--do_bert", "--use_minilm_for_query_embedding", "--do_negative_weighting"],
+      "args": ["--word_emb_dim=50", "--emb_dim=50", "--batch=4", "--loss_strategy=luca_min", "--dry_run", "--device=cpu", "--dataset=flickr30k", "--do_bert", "--use_minilm_for_query_embedding", "--do_negative_weighting"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}",
       "env": {
