--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "flickr (b=4, e=50, l=luca)",
+      "name": "main",
       "type": "python",
       "request": "launch",
       "program": "main.py",
-      "args": ["--word_emb_dim=50", "--emb_dim=50", "--batch=4", "--loss_strategy=luca", "--dry_run", "--device=cpu", "--dataset=referit", "--do_head", "--use_head_for_concept_embedding", "--do_relations", "--do_locations", "--use_relations_for_concept_embedding"],
+      "args": ["--word_emb_dim=50", "--emb_dim=50", "--batch=4", "--loss_strategy=luca_max", "--dry_run", "--device=cpu", "--dataset=flickr30k", "--do_head", "--use_head_for_concept_embedding", "--do_relations", "--do_locations", "--use_relations_for_concept_embedding"],
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}",
       "env": {
