--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,20 @@
       }
     },
     {
+      "name": "test",
+      "type": "python",
+      "request": "launch",
+      "program": "main.py",
+      "args": ["--word_emb_dim=300", "--emb_dim=300", "--batch=1", "--loss_strategy=luca_max", "--dry_run", "--device=cpu", "--dataset=referit", "--do_head", "--use_head_for_concept_embedding", "--do_relations", "--do_locations", "--use_relations_for_concept_embedding", "--relations_strategy=baseline", "--test_set", "--file=20230112__04__referit-relations_0.pt", "--train_fract=0.01"],
+      "console": "integratedTerminal",
+      "cwd": "${workspaceFolder}",
+      "env": {
+        "PYTHONPATH":"${PYTHONPATH}:/home/lparolari/.miniconda3/envs/weakvg/bin",
+        "WANDB_MODE": "offline",
+        "TOKENIZERS_PARALLELISM": "true"
+      }
+    },
+    {
       "name": "flickr (b=4, e=300, l=luca, spell+oov)",
       "type": "python",
       "request": "launch",
